--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Add these styles to your global CSS file or within a CSS module */
+/* Gallery slider */
 
 .slide {
   height: 100vh; /* Full viewport height */
