--- a/src/app/components/AnimatedText.module.css
+++ b/src/app/components/AnimatedText.module.css
@@ -1,6 +1,6 @@
 .container {
   font-family: "Source Sans Pro", Arial, sans-serif;
-  background: #becccc;
+  background: #cbdad4;
   text-transform: uppercase;
   color: #fff;
   text-align: center;
