hopefully last additions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --font-stint-ultra-expanded: "Stint Ultra Expanded", cursive;
+  --font-pontano-sans: "Pontano Sans", sans-serif;
+  --font-luxurious-script: "Luxurious Script", cursive;
+  --font-familjen-grotesk: "Familjen Grotesk", sans-serif;
+}
+
 /* Gallery slider */
 
 .slide {
