--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --font-pontano-sans: "Pontano Sans", sans-serif;
   --font-luxurious-script: "Luxurious Script", cursive;
   --font-familjen-grotesk: "Familjen Grotesk", sans-serif;
+  --font-lobster: "Lobster", cursive;
 }
 
 /* Gallery slider */
@@ -98,20 +99,8 @@
   background-color: #023d82;
 }
 
-.background-color {
-  background-image: linear-gradient(
-    to bottom,
-    #cbdad4,
-    #c8d8d1,
-    #c5d5cf,
-    #c2d3cc,
-    #bfd1ca,
-    #bfd1ca,
-    #bfd1ca,
-    #bfd1ca,
-    #c2d3cc,
-    #c5d5cf,
-    #c8d8d1,
-    #cbdad4
-  );
+.passions-conflict-regular {
+  font-family: "Passions Conflict", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
